airflow/logs/dag_id=test_dag/run_id=manual__2024-11-05T18:03:19.122391+00:00/task_id=database_tasks.create_gpu_specs_table_task/attempt=2.log
[2024-11-05T18:35:54.118+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2024-11-05T18:35:54.226+0000] {taskinstance.py:2612} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: test_dag.database_tasks.create_gpu_specs_table_task manual__2024-11-05T18:03:19.122391+00:00 [queued]>
[2024-11-05T18:35:54.233+0000] {taskinstance.py:2612} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: test_dag.database_tasks.create_gpu_specs_table_task manual__2024-11-05T18:03:19.122391+00:00 [queued]>
[2024-11-05T18:35:54.233+0000] {taskinstance.py:2865} INFO - Starting attempt 2 of 2
[2024-11-05T18:35:54.247+0000] {taskinstance.py:2888} INFO - Executing <Task(PostgresOperator): database_tasks.create_gpu_specs_table_task> on 2024-11-05 18:03:19.122391+00:00
[2024-11-05T18:35:54.250+0000] {standard_task_runner.py:72} INFO - Started process 21598 to run task
[2024-11-05T18:35:54.256+0000] {standard_task_runner.py:104} INFO - Running: ['***', 'tasks', 'run', 'test_dag', 'database_tasks.create_gpu_specs_table_task', 'manual__2024-11-05T18:03:19.122391+00:00', '--job-id', '9', '--raw', '--subdir', 'DAGS_FOLDER/test_dag.py', '--cfg-path', '/tmp/tmph5p9mtbm']
[2024-11-05T18:35:54.257+0000] {standard_task_runner.py:105} INFO - Job 9: Subtask database_tasks.create_gpu_specs_table_task
[2024-11-05T18:35:54.308+0000] {task_command.py:467} INFO - Running <TaskInstance: test_dag.database_tasks.create_gpu_specs_table_task manual__2024-11-05T18:03:19.122391+00:00 [running]> on host 1c3a9e30b1b7
[2024-11-05T18:35:54.391+0000] {taskinstance.py:3131} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='veil' AIRFLOW_CTX_DAG_ID='test_dag' AIRFLOW_CTX_TASK_ID='database_tasks.create_gpu_specs_table_task' AIRFLOW_CTX_EXECUTION_DATE='2024-11-05T18:03:19.122391+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-11-05T18:03:19.122391+00:00'
[2024-11-05T18:35:54.393+0000] {taskinstance.py:731} INFO - ::endgroup::
[2024-11-05T18:35:54.401+0000] {sql.py:278} INFO - Executing: None
[2024-11-05T18:35:54.410+0000] {base.py:84} INFO - Retrieving connection 'postgres_default'
[2024-11-05T18:35:54.422+0000] {base.py:84} INFO - Retrieving connection 'postgres_default'
[2024-11-05T18:35:54.428+0000] {sql.py:544} INFO - Running statement: None, parameters: None
[2024-11-05T18:35:54.429+0000] {taskinstance.py:3310} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/usr/local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/providers/common/sql/operators/sql.py", line 284, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 489, in run
    self._run_command(cur, sql_statement, parameters)
  File "/usr/local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 549, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "None"
LINE 1: None
        ^

[2024-11-05T18:35:54.439+0000] {taskinstance.py:1225} INFO - Marking task as FAILED. dag_id=test_dag, task_id=database_tasks.create_gpu_specs_table_task, run_id=manual__2024-11-05T18:03:19.122391+00:00, execution_date=20241105T180319, start_date=20241105T183554, end_date=20241105T183554
[2024-11-05T18:35:54.455+0000] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2024-11-05T18:35:54.455+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 9 for task database_tasks.create_gpu_specs_table_task (syntax error at or near "None"
LINE 1: None
        ^
; 21598)
Traceback (most recent call last):
  File "/usr/local/lib/python3.11/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/utils/cli.py", line 115, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 3004, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/usr/local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 3158, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 3182, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/providers/common/sql/operators/sql.py", line 284, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 489, in run
    self._run_command(cur, sql_statement, parameters)
  File "/usr/local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 549, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "None"
LINE 1: None
        ^

[2024-11-05T18:35:54.475+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2024-11-05T18:35:54.492+0000] {logging_mixin.py:190} WARNING - /usr/local/lib/python3.11/site-packages/***/models/baseoperator.py:1378 AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
[2024-11-05T18:35:54.503+0000] {taskinstance.py:3900} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-11-05T18:35:54.509+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
